--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "gws-token-activity-analyzer"
 version = "0.1.0"
-description = "Add your description here"
+description = "Google Workspace Token Activity Audit Pipeline"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
@@ -19,3 +19,10 @@ dependencies = [
 dev = [
     "pytest>=9.0.0",
 ]
+
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+force-include = { "pyproject.toml" = "pyproject.toml" }
