added IncrementalLoader logger to dg propagation

--- a/gws-pipeline/dagster/dagster.yaml
+++ b/gws-pipeline/dagster/dagster.yaml
@@ -6,6 +6,7 @@ python_logs:
         - StateStore
         - TokenActivityAnalyzer
         - GWSSettings
+        - IncrementalLoader
     python_log_level: DEBUG
     dagster_handler_config:
         handlers:
