--- a/gws_audit_analyzer/dbt_project.yml
+++ b/gws_audit_analyzer/dbt_project.yml
@@ -1,12 +1,11 @@
-
 # Name your project! Project names should contain only lowercase characters
 # and underscores. A good package name should reflect your organization's
 # name or the intended use of these models
-name: 'gws_audit_analyzer'
-version: '1.0.0'
+name: "gws_audit_analyzer"
+version: "1.0.0"
 
 # This setting configures which "profile" dbt uses for this project.
-profile: 'gws_audit_analyzer'
+profile: "gws_audit_analyzer"
 
 # These configurations specify where dbt should look for different types of files.
 # The `model-paths` config, for example, states that models in this project can be
@@ -18,10 +17,9 @@ seed-paths: ["seeds"]
 macro-paths: ["macros"]
 snapshot-paths: ["snapshots"]
 
-clean-targets:         # directories to be removed by `dbt clean`
-  - "target"
-  - "dbt_packages"
-
+clean-targets: # directories to be removed by `dbt clean`
+    - "target"
+    - "dbt_packages"
 
 # Configuring models
 # Full documentation: https://docs.getdbt.com/docs/configuring-models
@@ -30,7 +28,18 @@ clean-targets:         # directories to be removed by `dbt clean`
 # directory as views. These settings can be overridden in the individual model
 # files using the `{{ config(...) }}` macro.
 models:
-  gws_audit_analyzer:
-    # Config indicated by + and applies to all files under models/example/
-    example:
-      +materialized: view
+    gws_audit_analyzer:
+        # Config indicated by + and applies to all files under models/example/
+        staging:
+            +materialized: view
+            +schema: staging
+            +meta:
+                dagster:
+                    group: staging
+
+        marts:
+            +materialized: table
+            +schema: marts
+            +meta:
+                dagster:
+                    group: marts
