Add reporting model group/schema with Dagster metadata

--- a/gws_audit_analyzer/dbt_project.yml
+++ b/gws_audit_analyzer/dbt_project.yml
@@ -43,3 +43,10 @@ models:
             +meta:
                 dagster:
                     group: marts
+
+        reporting:
+            +materialized: view
+            +schema: reporting
+            +meta:
+                dagster:
+                    group: reporting
