Configure reporting model group/schema and Dagster metadata

--- a/gws_audit_analyzer/dbt_project.yml
+++ b/gws_audit_analyzer/dbt_project.yml
@@ -44,6 +44,13 @@ models:
                 dagster:
                     group: marts
 
+            aggregates:
+                +materialized: table
+                +schema: marts
+                +meta:
+                    dagster:
+                        group: aggregates
+
         reporting:
             +materialized: view
             +schema: reporting
